Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-58276

Font rendering broken with shared OpenGL contexts

    XMLWordPrintable

Details

    • e0f0850cd48b92ae3beb33b65a3ac936d8f38b08

    Description

      To reproduce, run attached example.

      After couple of seconds, all texts disappear. glBindFramebuffer() call in QOpenGLTextureGlyphCache::resizeTextureData seems to fail, which might be the reason this is happening.

      Attachments

        1. qtbug58276.tar.gz
          2 kB
        2. SharedGraphicsSceneContext.trace
          1.20 MB
        3. stacktrace.txt
          2 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lagocs Laszlo Agocs
            poikelin Joni Poikelin
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes